# gflags-example

./: .gitignore  CMakeLists.txt  README.md  WORKSPACE
foo/: BUILD  CMakeLists.txt  foo.cc  main.cc
src/: CMakeLists.txt
